# api/file.pb.go
@@ -372,30 +372,30 @@ var File_file_proto protoreflect.FileDescriptor
 const file_file_proto_rawDesc = "" +
 	"\n" +
 	"\n" +
-	"file.proto\x12\x04file\x1a\x1cgoogle/api/annotations.proto\x1a\x19google/api/httpbody.proto\"\xa8\x01\n" +
-	"\x04File\x12\x12\n" +
-	"\x04name\x18\x01 \x01(\tR\x04name\x12!\n" +
-	"\fcontent_type\x18\x02 \x01(\tR\vcontentType\x12\x12\n" +
-	"\x04size\x18\x03 \x01(\x03R\x04size\x12\x1a\n" +
-	"\bchecksum\x18\x04 \x01(\tR\bchecksum\x12\x1a\n" +
-	"\buploader\x18\x05 \x01(\tR\buploader\x12\x1d\n" +
+	"file.proto\x12\x04file\x1a\x1cgoogle/api/annotations.proto\x1a\x1fgoogle/api/field_behavior.proto\x1a\x19google/api/httpbody.proto\"\xd8\x01\n" +
+	"\x04File\x12\x1a\n" +
+	"\x04name\x18\x01 \x01(\tB\x06\xe0A\x03\xe0A\x02R\x04name\x12)\n" +
+	"\fcontent_type\x18\x02 \x01(\tB\x06\xe0A\x03\xe0A\x02R\vcontentType\x12\x1a\n" +
+	"\x04size\x18\x03 \x01(\x03B\x06\xe0A\x03\xe0A\x02R\x04size\x12\"\n" +
+	"\bchecksum\x18\x04 \x01(\tB\x06\xe0A\x03\xe0A\x02R\bchecksum\x12\"\n" +
+	"\buploader\x18\x05 \x01(\tB\x06\xe0A\x03\xe0A\x02R\buploader\x12%\n" +
 	"\n" +
-	"created_at\x18\x06 \x01(\x03R\tcreatedAt\"z\n" +
+	"created_at\x18\x06 \x01(\x03B\x06\xe0A\x03\xe0A\x02R\tcreatedAt\"z\n" +
 	"\x11UploadFileRequest\x12\x12\n" +
 	"\x04name\x18\x01 \x01(\tR\x04name\x12!\n" +
 	"\fcontent_type\x18\x02 \x01(\tR\vcontentType\x12\x12\n" +
 	"\x04data\x18\x03 \x01(\fR\x04data\x12\x1a\n" +
-	"\bchecksum\x18\x04 \x01(\tR\bchecksum\"F\n" +
-	"\x12UploadFileResponse\x12\x1e\n" +
+	"\bchecksum\x18\x04 \x01(\tR\bchecksum\"V\n" +
+	"\x12UploadFileResponse\x12&\n" +
 	"\x04file\x18\x01 \x01(\v2\n" +
-	".file.FileR\x04file\x12\x10\n" +
-	"\x03url\x18\x02 \x01(\tR\x03url\"&\n" +
+	".file.FileB\x06\xe0A\x03\xe0A\x02R\x04file\x12\x18\n" +
+	"\x03url\x18\x02 \x01(\tB\x06\xe0A\x03\xe0A\x02R\x03url\"&\n" +
 	"\x12GetFileMetaRequest\x12\x10\n" +
-	"\x03url\x18\x01 \x01(\tR\x03url\"G\n" +
-	"\x13GetFileMetaResponse\x12\x1e\n" +
+	"\x03url\x18\x01 \x01(\tR\x03url\"W\n" +
+	"\x13GetFileMetaResponse\x12&\n" +
 	"\x04file\x18\x01 \x01(\v2\n" +
-	".file.FileR\x04file\x12\x10\n" +
-	"\x03url\x18\x02 \x01(\tR\x03url\"\"\n" +
+	".file.FileB\x06\xe0A\x03\xe0A\x02R\x04file\x12\x18\n" +
+	"\x03url\x18\x02 \x01(\tB\x06\xe0A\x03\xe0A\x02R\x03url\"\"\n" +
 	"\x0eGetFileRequest\x12\x10\n" +
 	"\x03url\x18\x01 \x01(\tR\x03url2\xa8\x02\n" +
 	"\vFileService\x12Y\n" +
